# flappybird

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
log/: latest_list
src/: CMakeLists.txt  constants.h  controller.c  controller.h  main.c  model.c  model.h  view.c  view.h
test/: CMakeLists.txt  test_bird.c  test_boundaries.c  test_esc_key.c  test_pipe_collision.c  test_positions.c
